--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <section>
-      <div class="container">
-        <div
-          <p id="joke" class="joke"></p>
-        </div>
-        <button type="button" id="getJokebtn" class="btn btn-primary">Siguiente Chiste</button>
+    <div class="container">
+      <div class="row tiempo">Parcialmente nublado</div>
+    </div>
+    <div class="container">
+      <div class="recuadro">
+        <h3 class="p-3">¿Preparado para reir? &#x1F602;</h3>
+        <p id="joke" class="joke p-3"></p>
+        <button type="button" id="getJokebtn" class="btn btn-info p-2 text-light">Siguiente Chiste</button>
       </div>
-    </section>
+    </div>
     <script src="./build/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
