--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <div class="recuadro">
         <h3 class="p-3">¿Preparado para reir? &#x1F602;</h3>
         <p id="joke" class="joke p-3"></p>
+        <button type="button" id="score1" class="btn p-2 emoji">😓</button>
+        <button type="button" id="score2" class="btn p-2 emoji">😐</button>
+        <button type="button" id="score3" class="btn p-2 emoji">😆</button>
+      <div>
         <button type="button" id="getJokebtn" class="btn btn-info p-2 text-light">Siguiente Chiste</button>
+      </div>
       </div>
     </div>
     <script src="./build/index.js"></script>
