--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="row tiempo">Parcialmente nublado</div>
+      <div class="row" id="tiempo">
+        <div id="weather-container"></div>
+      </div>
     </div>
     <div class="container">
       <div class="recuadro">
