--- a/index.html
+++ b/index.html
@@ -13,17 +13,26 @@
         <div id="weather-container"></div>
       </div>
     </div>
-    <div class="container">
-      <div class="recuadro">
-        <h3 class="p-3">¿Preparado para reir? &#x1F602;</h3>
-        <p id="joke" class="joke p-3"></p>
-        <button type="button" id="score1" class="btn p-2 emoji">😓</button>
-        <button type="button" id="score2" class="btn p-2 emoji">😐</button>
-        <button type="button" id="score3" class="btn p-2 emoji">😆</button>
-      <div>
-        <button type="button" id="getJokebtn" class="btn btn-info p-2 text-light">Siguiente Chiste</button>
+    <div class="container position-relative">
+      <div class="row">
+        <div class="col recuadro">
+          <div class="blob-container">
+            <img src="./images/blob_1.svg" alt="blob image" class="blob-image" id="blob">
+            <div class="content">
+              <h3 class="p-2">¿Preparado para reir? &#x1F602;</h3>
+              <p id="joke" class="joke p-2"></p>
+              <button type="button" id="score1" class="btn p-2 emoji">😓</button>
+              <button type="button" id="score2" class="btn p-2 emoji">😐</button>
+              <button type="button" id="score3" class="btn p-2 emoji">😆</button>
+              <div>
+                <button type="button" id="getJokebtn" class="btn btn-info p-2 mt-2">Siguiente Chiste</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      </div>
+      <img src="./images/blob_6.svg" alt="blob left" class="blob-small left">
+      <img src="./images/blob_7.svg" alt="blob right" class="blob-small right">
     </div>
     <script src="./build/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
